# nimbusware

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  HermesLauncher.spec  LICENSE  NimbuswareLauncher.spec  PLAN_GAP.md  README.md  SECURITY.md  alllms.md  docker-compose.yml  hermes-orchestrator-local-plan.md  launcher.py  nimbusware-orchestrator-local-plan.md  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: archetype_fit_weekly.yml  bundle_faiss_index.yml  ci.yml  e2e_flake_monitor.yml  e2e_smoke.yml  k8s_reference_smoke.yml  launch_eval.yml  nimbusware_patch_sample.yml  oidc_smoke.yml  patch_toolchain.yml  product_polish_smoke.yml  publish_bootstrap.yml  publish_launcher.yml  publish_vscode_extension.yml  sbom.yml  scraper_artifact_prune.yml  slow_tests.yml  ssh_hardware_probe.yml  swe_bench.yml  web-tests.yml
.hermes/integration_adapter_writer/: 048939f8-f655-49cd-82e7-d4e96d8efa70.json  0b36b0e8-db75-47ae-8755-b9fd2f988f0c.json  11036165-8525-40d5-ba5a-da04ba4d009c.json  1202685a-0058-4318-ab2c-a6c46f66dbd8.json  1758ae3d-17d1-47c0-b753-a886e5520bdf.json  1add1c3d-8b9c-46ac-9069-74a6afb22b56.json  1dacb012-2f38-4140-959d-54b1e4c268f4.json  216317a6-509a-42a5-be76-b64652bb04fa.json  26ff0bd2-d5b4-43c0-8c43-d4d3006a3377.json  2848add5-878a-4df1-ac6b-b8e1bbd60385.json  2f46ab37-e6c0-4beb-9bf3-0de9b18fbfe0.json  337eb600-e912-4875-b170-e55c37f898c2.json  346cc77d-0622-41c8-9154-2e7419604824.json  36cdac97-3874-4c1e-911f-0f90163daaca.json  38d944bc-f09e-44ac-a4d0-9a6b69578d9d.json  3c62f3c9-39c5-4138-bf03-c5bc50175aa3.json  40d71aef-3f95-461d-866a-ec7ad8d97fdf.json  41393161-a277-40e0-8178-ffb91fa41ffa.json  414a33f2-8306-4a25-b534-8785ec6a4c9a.json  44414422-bde4-4707-9e2e-9b6bdc789b94.json  4f1e8ef7-6ea8-48dc-992a-7831af26fbe9.json  516a3478-39f5-4d6f-8e78-45b2be4843bf.json  52ecc274-214b-49ef-addd-6d28c5aff1a3.json  5f25f0e2-7a81-4026-9aef-b5e9d8fa4c6d.json  5f855483-f68f-4105-90c9-208ff92b0fe4.json  63c25ffc-6774-454e-a78d-f0903bd08a66.json  64082d99-f9e8-46e7-b0f1-569102c86d3d.json  6515bcc6-2ca7-4638-888b-846bbb6ed8db.json  6575c14d-cc1d-492b-bc95-54d000991ab3.json  66193ac4-c7bf-49fe-b836-7faa698c01e2.json  683fd86e-ddf6-42b0-9bfc-2201a3dcd773.json  6854289c-e8bc-4929-83d7-95f1acc959ac.json  6b5a53d4-4511-48d2-8963-ea5546365757.json  730943bb-cdc5-475d-9113-360baa2c5c83.json  79a59db3-994d-49e6-a37e-7b005577f71e.json  7a13404b-0e67-4ff4-86c1-106af11d3339.json  7d461892-83ed-4605-a72a-25033d922ed3.json  7d86a711-e342-4bbf-8857-618a4985f0f9.json  7ead4934-e933-4d09-a303-53e788b56479.json  7f7cb0dd-60e0-4108-bed6-f586733b6dce.json  (+41 more)
.streamlit/: config.toml
benchmarks/: README.md  archetype_fit_streak.json  gate_failure_comprehension_fixture.json  latest_archetype_metrics.json  latest_classifier_acceptance.json  latest_critic_reliability.json  latest_factory_weekly.json  latest_fo2172_live_journey.json  latest_intent_to_patch.json  latest_live_writers_soak.json  latest_swe_bench.json
charts/nimbusware/: Chart.yaml  values.yaml
configs/: collab_policy.yaml  model-routing.yaml  model_policy.yaml  model_providers.yaml  roles.yaml  routing_presets.yaml
configs/autopilot/: presets.yaml  user_profiles.yaml
configs/bundles/: catalog.yaml
docs/: README.md  agent-runtime.md  architecture.md  collaborative-chat-threat-model.md  collaborative-chat.md  compute-mesh.md  conversation-library.md  enterprise-buyer.md  enterprise-research-index.md  eval-tuning-guide.md  getting-started.md  hybrid-routing-migration.md  ide-bridge.md  install-profiles.md  integrations-external-chat.md  model-hub.md  operator-bundle-catalog-promotion.md  operator-interjection-slo.md  operator-settings.md  security-quality-gates.md
docs/deploy/: README.md  (+19 more)
scripts/: NimbuswareLauncher.spec  README.md  _fix_llm_common_imports.py  _fix_llm_docstrings.py  _split_llm_plan.py  apply_event_store.ps1  apply_event_store.sh  audit_operator_env.py  bootstrap_consumer.py  build_bundle_faiss_index.ps1  build_bundle_faiss_index.py  build_bundle_faiss_index.sh  build_launcher.ps1  build_launcher.sh  build_memory_faiss_index.py  ci_check.ps1  ci_check.sh  count_loc.py  coverage_package_floors.py  e2e_redis_fleet_soak_runbook.md  e2e_smoke.py  e2e_stack_soak_runbook.md  explicit_llm_imports.py  explicit_pipeline_imports.py  explicit_run_detail_imports.py  explicit_star_imports.py  explicit_workflows_shared.py  fix_workflow_st_imports.py  fleet_ollama_sli_runbook.md  install-hermes.ps1  install-hermes.sh  install-nimbusware.ps1  install-nimbusware.sh  install_hermes.py  install_nimbusware.py  launch_eval.py  measure_classifier_acceptance.py  measure_intent_to_patch.py  mypy_ci_targets.py  normalize_run_detail_indent.py  (+64 more)
tests/: README.md  conftest.py  test_agent_evaluator_auto_promote_probation.py  test_agent_evaluator_hook.py  test_agent_evaluator_llm_branch.py  test_agent_evaluator_persona_in_shelves_contract.py  test_agent_evaluator_rules.py  test_agent_evaluator_stage.py  test_agent_evaluator_workflow_explainer.py  test_allowed_event_types.py  test_anti_deadlock_escalation_emitter_contract.py  test_anti_deadlock_helpers_composite_contract.py  test_api.py  test_api_problem_responses.py  test_b1_b2_promotion_slices.py  test_b1_promotion_13_iaw.py  test_b1_promotion_15_evaluator.py  test_b1_promotion_16_critique.py  test_b1_promotion_17_sr.py  test_b1_promotion_18_security.py  test_b1_promotion_19_escalation.py  test_build_bundle_faiss_index.py  test_build_bundle_faiss_index_script.py  test_build_memory_faiss_index.py  test_bundle_catalog_resolve_contract.py  test_bundle_catalog_write_api.py  test_bundle_faiss_index_sync_state.py  test_bundle_integrator_gate_direct_contract.py  test_bundle_memory_outcomes.py  test_bundle_memory_ranking.py  test_catalog_loader_defensive_paths_contract.py  test_config_cli.py  test_config_materializer.py  test_config_notify.py  test_config_personas_db.py  test_config_roles.py  test_config_store.py  test_config_store_integration.py  test_config_t2_documents.py  test_config_t2_runtime.py  (+188 more)
(+8524 files in other folders)
