[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nimbusware"
version = "0.5.0"
description = "Nimbusware local-first platform integrating the Nimbusware online agentic system. Python >=3.10; use 3.11+ when available."
authors = []
license = "GPL-3.0-only"
package-mode = true
packages = [
  { include = "agent_core", from = "packages" },
  { include = "nimbusware_store", from = "packages" },
  { include = "nimbusware_orchestrator", from = "packages" },
  { include = "nimbusware_api", from = "packages" },
  { include = "nimbusware_executor", from = "packages" },
  { include = "nimbusware_console", from = "packages" },
  { include = "nimbusware_extensions", from = "packages" },
  { include = "nimbusware_config", from = "packages" },
  { include = "nimbusware_env", from = "packages" },
  { include = "nimbusware_iam", from = "packages" },
  { include = "nimbusware_memory", from = "packages" },
  { include = "nimbusware_research", from = "packages" },
  { include = "nimbusware_projections", from = "packages" },
  { include = "nimbusware_maker", from = "packages" },
  { include = "nimbusware_maker_web", from = "packages" },
  { include = "nimbusware_mcp", from = "packages" },
  { include = "nimbusware_client", from = "packages" },
  { include = "nimbusware_agent_tools", from = "packages" },
  { include = "nimbusware_hw", from = "packages" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pydantic = ">=2,<3"
pyyaml = ">=6"
httpx = ">=0.27"
fastapi = ">=0.115"
starlette = ">=1.0.1"
uvicorn = { version = ">=0.30", extras = ["standard"] }
psycopg = { version = ">=3.2", extras = ["binary"] }
idna = ">=3.15"
numpy = ">=1.26"
pywebview = ">=5"
pywebpush = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-cov = ">=6"
pytest-benchmark = ">=4"
ruff = "0.15.16"
mypy = ">=1.13"
types-PyYAML = ">=6.0"
bandit = { version = ">=1.7", extras = ["toml"] }
pip-audit = ">=2.7"
pyright = { version = ">=1.1.380", extras = ["nodejs"] }
pytest-rerunfailures = "^16.3"
playwright = ">=1.40"

[tool.poetry.group.faiss]
optional = true

[tool.poetry.group.faiss.dependencies]
faiss-cpu = ">=1.8"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = ">=5"

[tool.poetry.group.fleet]
optional = true

[tool.poetry.group.fleet.dependencies]
e2b = ">=1.0,<3"

[tool.poetry.scripts]
nimbusware-api = "nimbusware_api.cli:main"
nimbusware-preflight = "nimbusware_orchestrator.preflight_cli:main"
nimbusware-config = "nimbusware_config.cli:main"
nimbusware-run-worker = "nimbusware_orchestrator.run_worker:main"
nimbusware-memory-index = "nimbusware_memory.cli:main"
nimbusware-memory-sync = "nimbusware_memory.sync_cli:main"
nimbusware-memory-replay = "nimbusware_orchestrator.replay_cli:main"
nimbusware-role-telemetry = "nimbusware_orchestrator.telemetry_cli:main"
nimbusware-routing-suggest = "nimbusware_orchestrator.routing_suggestions_cli:main"
nimbusware-fleet-ollama-sli = "nimbusware_orchestrator.fleet_ollama_sli_cli:main"
nimbusware-run = "nimbusware_env.run_app:main"
nimbusware-admin = "nimbusware_env.admin_app:main"
nimbusware-maker = "nimbusware_maker.cli:main"
nimbusware-mcp = "nimbusware_mcp.cli:main"
nimbusware-git-pr = "nimbusware_env.git_pr_cli:main"
nimbusware-launcher = "nimbusware_env.launcher_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "tests"]
norecursedirs = [".git", ".venv", "node_modules", "fixtures"]
markers = [
  "integration: requires PostgreSQL (set NIMBUSWARE_DATABASE_URL)",
  "e2e: PR e2e subset (import smoke + optional Postgres API checks)",
  "e2e_journey: multi-step operator journey (TestClient)",
  "e2e_stack: requires live API subprocess and/or Postgres stack test",
  "e2e_fixture_repo: uses tests/fixtures/repos copy",
  "slice_e2e: slice.e2e workflow gate (requires NIMBUSWARE_SLICE_E2E_COMMAND in CI)",
  "web: web UI parity matrix and static/API smoke (tests/web)",
  "benchmark: pytest-benchmark fleet harness (fo206)",
  "slow: long-running tests excluded from default CI unit job",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"packages/**/__init__.py" = ["F401", "F403", "F405"]
"packages/nimbusware_console/**/*_display.py" = ["F401", "F403", "F405"]
"packages/nimbusware_console/*_display.py" = ["F401", "F403", "F405"]
"packages/nimbusware_console/*_explainer.py" = ["F401", "F403", "F405"]
"packages/nimbusware_console/bundle_catalog.py" = ["F401", "F403", "F405"]
"packages/nimbusware_console/integrator_workflow_preview.py" = ["F401", "F403", "F405"]
"packages/nimbusware_console/bundle_catalog/__init__.py" = ["F811"]
"packages/nimbusware_console/bundle_catalog/catalog_local/__init__.py" = ["F811"]
"packages/nimbusware_console/bundle_catalog/faiss_status/__init__.py" = ["F811"]
"packages/nimbusware_console/pages/_state.py" = ["F403", "F405"]
"packages/nimbusware_orchestrator/_pipeline/**" = ["F401", "F403", "F405"]
"packages/nimbusware_orchestrator/_pipeline/_helpers.py" = ["F401", "F403", "F405"]
"packages/nimbusware_orchestrator/llm/**" = ["F401", "F403", "F405"]
"packages/nimbusware_api/app.py" = ["E402"]
"packages/nimbusware_console/custom_agents_ui.py" = ["E402"]
"packages/nimbusware_console/agent_evaluator_display/metrics.py" = ["E402"]
"packages/nimbusware_console/prune_status_display/*.py" = ["E402"]
"packages/nimbusware_api/routes/preflight.py" = ["E402"]
"packages/nimbusware_maker/app.py" = ["E402"]
"packages/nimbusware_orchestrator/merge.py" = ["F401"]
"packages/nimbusware_orchestrator/run_worker.py" = ["F401"]
"packages/nimbusware_client/http.py" = ["F401"]
"packages/nimbusware_memory/store.py" = ["F401"]
"packages/agent_core/models/events.py" = ["F403", "F405"]
"packages/nimbusware_api/schemas/openapi.py" = ["F401"]
"packages/nimbusware_orchestrator/scraper_artifacts.py" = ["F401"]
"packages/nimbusware_orchestrator/scraper_artifacts_inventory.py" = ["F401"]
"packages/nimbusware_orchestrator/scraper_artifacts_prune.py" = ["F401"]
"packages/nimbusware_orchestrator/scraper_artifacts_retention.py" = ["F401"]
"packages/nimbusware_console/bundle_catalog/catalog_local/search.py" = ["F401"]
"packages/nimbusware_console/bundle_catalog/faiss_status/drilldown.py" = ["F401"]
"packages/nimbusware_console/integrator_gate/latest_delta.py" = ["F401"]
"packages/nimbusware_console/integrator_preview/merge.py" = ["F401"]
"packages/nimbusware_console/main.py" = ["E402", "F401"]
"packages/nimbusware_maker/main.py" = ["E402"]
"tests/**" = ["E402"]

[tool.coverage.run]
source = ["packages"]
branch = false
omit = [
  "*/tests/*",
  "*/__main__.py",
  "packages/**/*_cli.py",
  # Postgres adapter: integration tests only (fo742).
  "packages/nimbusware_store/postgres.py",
  "packages/nimbusware_api/cli.py",
  "packages/nimbusware_config/cli.py",
  "packages/nimbusware_maker/cli.py",
  "packages/nimbusware_console/main.py",
  "packages/nimbusware_maker/protocol.py",
  "packages/nimbusware_maker/session.py",
  "packages/nimbusware_maker/readiness.py",
  "packages/nimbusware_maker/store.py",
  "packages/nimbusware_maker/slice_preview.py",
  "packages/nimbusware_console/*_workflow_explainer/**",
  "packages/nimbusware_console/**/*_workflow_explainer/**",
  "packages/nimbusware_console/*_explainer/**",
  "packages/nimbusware_console/**/*_explainer/**",
  "packages/nimbusware_console/integrator_*/**",
  "packages/nimbusware_console/bundle_catalog/**",
  "packages/nimbusware_console/persona_catalog/**",
  "packages/nimbusware_console/run_escalated/**",
  "packages/nimbusware_console/security_scan_on_verify/**",
  "packages/nimbusware_console/self_refinement/**",
  "packages/nimbusware_console/*_display.py",
  "packages/nimbusware_console/**/*_display.py",
  "packages/nimbusware_env/launcher_app.py",
  "packages/nimbusware_env/run_app.py",
  "packages/nimbusware_env/desktop_common.py",
  "packages/nimbusware_env/linux_desktop_deps.py",
  "packages/nimbusware_env/admin_app.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
strict = true
packages = [
  "agent_core",
  "nimbusware_store",
  "nimbusware_orchestrator",
  "nimbusware_api",
  "nimbusware_executor",
  "nimbusware_console",
  "nimbusware_extensions",
  "nimbusware_config",
  "nimbusware_env",
  "nimbusware_iam",
  "nimbusware_memory",
  "nimbusware_research",
  "nimbusware_projections",
  "nimbusware_maker",
  "nimbusware_client",
  "nimbusware_agent_tools",
]
mypy_path = "packages"

# Pipeline mypy strict islands.
[[tool.mypy.overrides]]
module = [
  "nimbusware_orchestrator._pipeline.base",
  "nimbusware_orchestrator._pipeline._helpers",
  "nimbusware_orchestrator._pipeline.create_run",
  "nimbusware_orchestrator._pipeline.micro_slice",
  "nimbusware_orchestrator._pipeline.lifecycle_verify",
  "nimbusware_orchestrator._pipeline.writers",
  "nimbusware_orchestrator._pipeline.lifecycle_plan",
  "nimbusware_orchestrator._pipeline.optional_critique",
  "nimbusware_orchestrator._pipeline.escalation",
  "nimbusware_orchestrator._pipeline.critique_gates_helpers",
  "nimbusware_orchestrator._pipeline.critique_gates_optional_emit",
  "nimbusware_orchestrator._pipeline.critique_gates_stage_failed",
  "nimbusware_orchestrator._pipeline.critique_gates",
  "nimbusware_orchestrator._pipeline.lifecycle",
  "nimbusware_orchestrator._pipeline.lifecycle_start",
  "nimbusware_orchestrator._pipeline.optional_stages_research",
  "nimbusware_orchestrator._pipeline.optional_stages_stitch",
  "nimbusware_orchestrator._pipeline.optional_stages_integrator",
  "nimbusware_orchestrator._pipeline.optional_stages_integration",
  "nimbusware_orchestrator._pipeline.optional_stages_self_refinement",
  "nimbusware_orchestrator._pipeline.optional_stages_agent_evaluator",
  "nimbusware_orchestrator._pipeline.optional_stages",
  "nimbusware_orchestrator._pipeline.compose",
  "nimbusware_orchestrator._pipeline.protocol_hosts",
  "nimbusware_orchestrator._pipeline.pipeline_scraper",
  "nimbusware_orchestrator._pipeline.dev_factory",
  "nimbusware_orchestrator._pipeline.__init__",
]
ignore_errors = false

# fo512 / fo526–fo530: explicit strict islands (documented in test_mypy_*_surface.py).
[[tool.mypy.overrides]]
module = [
  "nimbusware_api.*",
  "nimbusware_api.schemas.ollama",
  "nimbusware_api.routes.ollama",
  "nimbusware_api.errors",
  "nimbusware_orchestrator.ollama_manage",
  "nimbusware_orchestrator.ollama_user_policy",
  "nimbusware_orchestrator.preflight",
  "nimbusware_orchestrator.merge",
  "nimbusware_orchestrator.workflow_profiles",
  "nimbusware_console.services.ollama",
  "nimbusware_maker.services.ollama",
]
ignore_errors = false

# fo731 (Lane X2): UI ignore narrowed (replaces blanket nimbusware_console.* / nimbusware_maker.*).
[[tool.mypy.overrides]]
module = [
  "nimbusware_console.main",
  "nimbusware_maker.slice_workflow",
  "nimbusware_maker.slice_workflow.*",
  "nimbusware_console.bundle_catalog",
  "nimbusware_console.bundle_catalog.*",
  "nimbusware_console.integrator_gate",
  "nimbusware_console.integrator_gate.*",
  "nimbusware_console.integrator_preview",
  "nimbusware_console.integrator_preview.*",
  "nimbusware_console.persona_catalog",
  "nimbusware_console.persona_catalog.*",
  "nimbusware_console.escalation_suppress_workflow_explainer",
  "nimbusware_console.escalation_suppress_workflow_explainer.*",
  "nimbusware_console.integrator_threshold_explainer",
  "nimbusware_console.integrator_threshold_explainer.*",
  "nimbusware_console.self_refinement_workflow_explainer",
  "nimbusware_console.self_refinement_workflow_explainer.*",
  "nimbusware_console.enterprise_console",
  "nimbusware_console.enterprise_console_ui",
  "nimbusware_console.explainer_workflow_disk",
  "nimbusware_console.integrator_gate_display",
  "nimbusware_console.integrator_workflow_apply",
  "nimbusware_console.integrator_workflow_preview",
  "nimbusware_console.security_scan_on_verify_display",
  "nimbusware_console.self_refinement_display",
]
ignore_errors = true

# fo610 (Lane V1): strict services plane.
[[tool.mypy.overrides]]
module = [
  "nimbusware_console.services",
  "nimbusware_console.services.*",
  "nimbusware_maker.services",
  "nimbusware_maker.services.*",
]
ignore_errors = false

# fo720 (Lane W2): typing tranche B — small leaf packages checked in CI mypy.
[[tool.mypy.overrides]]
module = [
  "nimbusware_projections",
  "nimbusware_projections.*",
  "nimbusware_client",
  "nimbusware_client.*",
  "nimbusware_agent_tools",
  "nimbusware_agent_tools.*",
]
ignore_errors = false

# fo732 (Lane X2): typing tranche D — API read layer + strict enterprise routes (CI mypy).
[[tool.mypy.overrides]]
module = [
  "nimbusware_api.read_models",
  "nimbusware_api.read_models.*",
  "nimbusware_api.facade",
  "nimbusware_api.deps",
  "nimbusware_api.routes.enterprise",
  "nimbusware_api.routes.enterprise.*",
  "nimbusware_api.routes.personas_helpers",
]
ignore_errors = false

# fo730 (Lane X1): typing tranche C — core libraries checked in CI mypy (strict globally).
[[tool.mypy.overrides]]
module = [
  "agent_core",
  "agent_core.*",
  "nimbusware_store",
  "nimbusware_store.*",
  "nimbusware_config",
  "nimbusware_config.*",
  "nimbusware_executor",
  "nimbusware_executor.*",
  "nimbusware_extensions",
  "nimbusware_extensions.*",
  "nimbusware_memory",
  "nimbusware_memory.*",
  "nimbusware_iam",
  "nimbusware_iam.*",
  "nimbusware_env",
  "nimbusware_env.*",
]
ignore_errors = false

# fo509: desktop launcher / subprocess (platform-specific); strict elsewhere in nimbusware_env.
[[tool.mypy.overrides]]
module = [
  "nimbusware_env.linux_desktop_deps",
  "nimbusware_env.desktop_common",
  "nimbusware_env.launcher_app",
  "nimbusware_env.run_app",
]
disable_error_code = [
  "attr-defined",
  "unused-ignore",
  "type-var",
  "misc",
  "call-overload",
  "no-any-return",
  "arg-type",
]

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["webview.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faiss", "faiss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", ".git", "tests", "scripts/_archive"]
skips = ["B101"]
