[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nimbusware"
version = "0.5.0"
description = "Nimbusware local-first platform integrating the Nimbusware online agentic system. Python >=3.10; use 3.11+ when available."
authors = []
license = "GPL-3.0-only"
package-mode = true
packages = [
  { include = "agent_core", from = "packages" },
  { include = "store", from = "packages" },
  { include = "orchestrator", from = "packages" },
  { include = "api", from = "packages" },
  { include = "executor", from = "packages" },
  { include = "console", from = "packages" },
  { include = "extensions", from = "packages" },
  { include = "config", from = "packages" },
  { include = "env", from = "packages" },
  { include = "iam", from = "packages" },
  { include = "auth", from = "packages" },
  { include = "memory", from = "packages" },
  { include = "research", from = "packages" },
  { include = "projections", from = "packages" },
  { include = "maker", from = "packages" },
  { include = "maker_web", from = "packages" },
  { include = "mcp", from = "packages" },
  { include = "client", from = "packages" },
  { include = "agent_tools", from = "packages" },
  { include = "hw", from = "packages" },
  { include = "compute", from = "packages" },
  { include = "standards", from = "packages" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pydantic = ">=2,<3"
pyyaml = ">=6"
httpx = ">=0.27"
fastapi = ">=0.115"
starlette = ">=1.3.1"
uvicorn = { version = ">=0.30", extras = ["standard"] }
psycopg = { version = ">=3.2", extras = ["binary"] }
idna = ">=3.15"
numpy = ">=1.26"
pywebview = ">=5"
pywebpush = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-cov = ">=6"
pytest-benchmark = ">=4"
ruff = "0.15.17"
mypy = ">=1.13"
types-PyYAML = ">=6.0"
bandit = { version = ">=1.7", extras = ["toml"] }
pip-audit = ">=2.7"
pyright = { version = ">=1.1.380", extras = ["nodejs"] }
pytest-rerunfailures = "^16.3"
playwright = ">=1.40"

[tool.poetry.group.faiss]
optional = true

[tool.poetry.group.faiss.dependencies]
faiss-cpu = ">=1.8"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = ">=5"

[tool.poetry.group.fleet]
optional = true

[tool.poetry.group.fleet.dependencies]
e2b = ">=1.0,<3"

[tool.poetry.scripts]
nimbusware-api = "api.cli:main"
nimbusware-preflight = "orchestrator.preflight_cli:main"
nimbusware-config = "config.cli:main"
nimbusware-run-worker = "orchestrator.run_worker:main"
nimbusware-memory-index = "memory.cli:main"
nimbusware-memory-sync = "memory.sync_cli:main"
nimbusware-memory-replay = "orchestrator.replay_cli:main"
nimbusware-role-telemetry = "orchestrator.telemetry_cli:main"
nimbusware-routing-suggest = "orchestrator.routing.suggestions_cli:main"
nimbusware-fleet-ollama-sli = "orchestrator.fleet.ollama_sli_cli:main"
nimbusware-run = "env.run_app:main"
nimbusware-admin = "env.admin_app:main"
nimbusware-maker = "maker.cli:main"
nimbusware-mcp = "mcp.cli:main"
nimbusware-standards = "standards.cli:main"
nimbusware-git-pr = "env.git_pr_cli:main"
nimbusware-launcher = "env.launcher_app:main"
nimbusware-compute-worker = "compute.worker_cli:main"
nimbusware-mesh-worker-minimal = "compute.minimal_worker_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "tests"]
norecursedirs = [".git", ".venv", "node_modules", "fixtures"]
markers = [
  "integration: requires PostgreSQL (set NIMBUSWARE_DATABASE_URL)",
  "e2e: PR e2e subset (import smoke + optional Postgres API checks)",
  "e2e_journey: multi-step operator journey (TestClient)",
  "e2e_stack: requires live API subprocess and/or Postgres stack test",
  "e2e_fixture_repo: uses tests/fixtures/repos copy",
  "slice_e2e: slice.e2e workflow gate (requires NIMBUSWARE_SLICE_E2E_COMMAND in CI)",
  "web: web UI parity matrix and static/API smoke (tests/web)",
  "benchmark: pytest-benchmark fleet harness (fo206)",
  "slow: long-running tests excluded from default CI unit job",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"packages/**/__init__.py" = ["F401", "F403", "F405"]
"packages/console/**/*_display.py" = ["F401", "F403", "F405"]
"packages/console/*_display.py" = ["F401", "F403", "F405"]
"packages/console/*_explainer.py" = ["F401", "F403", "F405"]
"packages/console/bundle_catalog.py" = ["F401", "F403", "F405"]
"packages/console/integrator_workflow_preview.py" = ["F401", "F403", "F405"]
"packages/console/bundle_catalog/__init__.py" = ["F811"]
"packages/console/bundle_catalog/catalog_local/__init__.py" = ["F811"]
"packages/console/bundle_catalog/faiss_status/__init__.py" = ["F811"]
"packages/console/pages/_state.py" = ["F403", "F405"]
"packages/orchestrator/_pipeline/**" = ["F401", "F403", "F405"]
"packages/orchestrator/_pipeline/_helpers.py" = ["F401", "F403", "F405", "F822"]
"packages/orchestrator/llm/**" = ["F401", "F403", "F405"]
"packages/api/app.py" = ["E402"]
"packages/console/custom_agents_ui.py" = ["E402"]
"packages/console/agent_evaluator_display/metrics.py" = ["E402"]
"packages/console/prune_status_display/*.py" = ["E402"]
"packages/api/routes/preflight.py" = ["E402"]
"packages/maker/app.py" = ["E402"]
"packages/orchestrator/merge.py" = ["F401"]
"packages/orchestrator/run_worker.py" = ["F401"]
"packages/client/http.py" = ["F401"]
"packages/memory/store.py" = ["F401"]
"packages/agent_core/models/events.py" = ["F403", "F405"]
"packages/api/schemas/openapi.py" = ["F401"]
"packages/orchestrator/scraper_artifacts.py" = ["F401"]
"packages/orchestrator/scraper_artifacts_inventory.py" = ["F401"]
"packages/orchestrator/scraper_artifacts_prune.py" = ["F401"]
"packages/orchestrator/scraper_artifacts_retention.py" = ["F401"]
"packages/console/bundle_catalog/catalog_local/search.py" = ["F401"]
"packages/console/bundle_catalog/faiss_status/drilldown.py" = ["F401"]
"packages/console/integrator_gate/latest_delta.py" = ["F401"]
"packages/console/integrator_preview/merge.py" = ["F401"]
"packages/maker/main.py" = ["E402"]
"tests/**" = ["E402"]

[tool.coverage.run]
source = ["packages"]
branch = false
omit = [
  "*/tests/*",
  "*/__main__.py",
  "packages/**/*_cli.py",
  # Postgres adapter: integration tests only (fo742).
  "packages/store/postgres.py",
  "packages/api/cli.py",
  "packages/config/cli.py",
  "packages/maker/cli.py",
  "packages/maker/protocol.py",
  "packages/maker/session.py",
  "packages/maker/readiness.py",
  "packages/maker/store.py",
  "packages/maker/slice_preview.py",
  "packages/console/*_workflow_explainer/**",
  "packages/console/**/*_workflow_explainer/**",
  "packages/console/*_explainer/**",
  "packages/console/**/*_explainer/**",
  "packages/console/integrator_*/**",
  "packages/console/bundle_catalog/**",
  "packages/console/persona_catalog/**",
  "packages/console/run_escalated/**",
  "packages/console/security_scan_on_verify/**",
  "packages/console/self_refinement/**",
  "packages/console/*_display.py",
  "packages/console/**/*_display.py",
  "packages/env/launcher_app.py",
  "packages/env/run_app.py",
  "packages/env/desktop_common.py",
  "packages/env/linux_desktop_deps.py",
  "packages/env/admin_app.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
strict = true
packages = [
  "agent_core",
  "store",
  "orchestrator",
  "api",
  "executor",
  "console",
  "extensions",
  "config",
  "env",
  "iam",
  "memory",
  "research",
  "projections",
  "maker",
  "client",
  "agent_tools",
]
mypy_path = "packages"

# Pipeline mypy strict islands.
[[tool.mypy.overrides]]
module = [
  "orchestrator._pipeline.base",
  "orchestrator._pipeline._helpers",
  "orchestrator._pipeline.create_run",
  "orchestrator._pipeline.micro_slice",
  "orchestrator._pipeline.lifecycle_verify",
  "orchestrator._pipeline.writers",
  "orchestrator._pipeline.lifecycle_plan",
  "orchestrator._pipeline.optional_critique",
  "orchestrator._pipeline.escalation",
  "orchestrator._pipeline.critique_gates_helpers",
  "orchestrator._pipeline.critique_gates_optional_emit",
  "orchestrator._pipeline.critique_gates_stage_failed",
  "orchestrator._pipeline.critique_gates",
  "orchestrator._pipeline.lifecycle",
  "orchestrator._pipeline.lifecycle_start",
  "orchestrator._pipeline.optional_stages_research",
  "orchestrator._pipeline.optional_stages_stitch",
  "orchestrator._pipeline.optional_stages_integrator",
  "orchestrator._pipeline.optional_stages_integration",
  "orchestrator._pipeline.optional_stages_self_refinement",
  "orchestrator._pipeline.optional_stages_agent_evaluator",
  "orchestrator._pipeline.optional_stages",
  "orchestrator._pipeline.compose",
  "orchestrator._pipeline.protocol_hosts",
  "orchestrator._pipeline.pipeline_scraper",
  "orchestrator._pipeline.dev_factory",
  "orchestrator._pipeline.__init__",
]
ignore_errors = false

# fo512 / fo526–fo530: explicit strict islands (documented in test_mypy_*_surface.py).
[[tool.mypy.overrides]]
module = [
  "api.*",
  "api.schemas.ollama",
  "api.routes.ollama",
  "api.errors",
  "orchestrator.routing.manage",
  "orchestrator.routing.user_policy",
  "orchestrator.preflight",
  "orchestrator.merge",
  "orchestrator.workflow.profiles",
  "console.services.ollama",
  "maker.services.ollama",
]
ignore_errors = false

# fo731 (Lane X2): UI ignore narrowed (replaces blanket console.* / maker.*).
[[tool.mypy.overrides]]
module = [
  "maker.slice_workflow",
  "maker.slice_workflow.*",
  "console.bundle_catalog",
  "console.bundle_catalog.*",
  "console.integrator_gate",
  "console.integrator_gate.*",
  "console.integrator_preview",
  "console.integrator_preview.*",
  "console.persona_catalog",
  "console.persona_catalog.*",
  "console.escalation_suppress_workflow_explainer",
  "console.escalation_suppress_workflow_explainer.*",
  "console.integrator_threshold_explainer",
  "console.integrator_threshold_explainer.*",
  "console.self_refinement_workflow_explainer",
  "console.self_refinement_workflow_explainer.*",
  "console.enterprise_console",
  "console.enterprise_console_ui",
  "console.integrator_gate_display",
  "console.integrator_workflow_apply",
  "console.integrator_workflow_preview",
  "console.security_scan_on_verify_display",
  "console.self_refinement_display",
]
ignore_errors = true

# fo610 (Lane V1): strict services plane.
[[tool.mypy.overrides]]
module = [
  "console.services",
  "console.services.*",
  "maker.services",
  "maker.services.*",
]
ignore_errors = false

# fo720 (Lane W2): typing tranche B — small leaf packages checked in CI mypy.
[[tool.mypy.overrides]]
module = [
  "projections",
  "projections.*",
  "client",
  "client.*",
  "agent_tools",
  "agent_tools.*",
]
ignore_errors = false

# fo732 (Lane X2): typing tranche D — API list helpers + strict enterprise routes (CI mypy).
[[tool.mypy.overrides]]
module = [
  "api.routes.runs.list_helpers",
  "api.facade",
  "api.deps",
  "api.routes.enterprise",
  "api.routes.enterprise.*",
  "api.routes.personas_helpers",
]
ignore_errors = false

# fo730 (Lane X1): typing tranche C — core libraries checked in CI mypy (strict globally).
[[tool.mypy.overrides]]
module = [
  "agent_core",
  "agent_core.*",
  "store",
  "store.*",
  "config",
  "config.*",
  "executor",
  "executor.*",
  "extensions",
  "extensions.*",
  "memory",
  "memory.*",
  "iam",
  "iam.*",
  "env",
  "env.*",
]
ignore_errors = false

# fo509: desktop launcher / subprocess (platform-specific); strict elsewhere in env.
[[tool.mypy.overrides]]
module = [
  "env.linux_desktop_deps",
  "env.desktop_common",
  "env.launcher_app",
  "env.run_app",
]
disable_error_code = [
  "attr-defined",
  "unused-ignore",
  "type-var",
  "misc",
  "call-overload",
  "no-any-return",
  "arg-type",
]

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["webview.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faiss", "faiss.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", ".git", "tests"]
skips = ["B101"]
